1. Reflects: add getJarPath(Class) to return jar absolute path. 2. Add new class: JavaAgent to attach java agent jar at runtime! 3. New Feature: Default Args!!! 4. Files: Use @DefaultArg to rewrite some methods. 5. Update README.